--- a/QRsampleApp/app/src/main/AndroidManifest.xml
+++ b/QRsampleApp/app/src/main/AndroidManifest.xml
@@ -4,20 +4,21 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true">
-        <activity android:name=".activity.QRGenerateActivity"></activity>
-        <activity android:name=".activity.QRReadActivity" />
-        <activity android:name=".activity.MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name=".activity.SetUpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.QRGenerateActivity" />
+        <activity android:name=".activity.MainActivity">
         </activity>
     </application>
 
